Try handmade action

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,8 +3,11 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+  CONTAINER_IMAGE: docker-overlord:${{ github.sha }}
 
 jobs:
 
@@ -13,6 +16,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag $CONTAINER_IMAGE
+    
+    - name: Set up Docker Hub
+      run: echo $DOCKER_TOKEN | docker -u $DOCKER_USERNAME --password-stdin
+    
+    - name: Push to Docker Hub
+      run: docker push $DOCKER_USERNAME/$CONTAINER_IMAGE
