--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,7 @@ jobs:
       run: docker build . --file Dockerfile --tag $CONTAINER_IMAGE
     
     - name: Set up Docker Hub
-      run: echo $DOCKER_TOKEN | docker -u $DOCKER_USERNAME --password-stdin
+      run: echo $DOCKER_TOKEN | docker login --username=$DOCKER_USERNAME --password-stdin
     
     - name: Push to Docker Hub
       run: docker push $DOCKER_USERNAME/$CONTAINER_IMAGE
